Added thumbnails for faster loading time.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00001.jpeg"
+                                        <img src="./photo/thumbnails/image00001.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -137,7 +137,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00055.jpeg"
+                                        <img src="./photo/thumbnails/image00055.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -148,7 +148,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00036.jpeg"
+                                        <img src="./photo/thumbnails/image00036.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -160,7 +160,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00015.jpeg"
+                                        <img src="./photo/thumbnails/image00015.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -172,7 +172,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00063.jpeg"
+                                        <img src="./photo/thumbnails/image00063.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -184,7 +184,7 @@ http://www.tooplate.com/view/2092-shelf
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/image00039.jpeg"
+                                        <img src="./photo/thumbnails/image00039.jpeg"
                                             alt="Image"
                                             class="img-fluid tm-img-center">
                                     </div>
@@ -252,17 +252,6 @@ http://www.tooplate.com/view/2092-shelf
 
             });
         </script>
-
-        <script>
-            $(function () {
-                $('.pop').on('click', function () {
-                    $('.imagepreview').attr('src', $(this).find('img').attr('src'));
-                    $('#imagemodal').modal('show');
-                });
-            });
-        </script>
-
-
     </body>
 
 </html>
