--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="author" content="Steve Lemire">
+        <meta name="description"
+            content="Pour vos projets d'aménagement extérieurs, notre équipe dynamique oeuvre de père en fils depuis plus de 30 ans de la planification à la réalisation">
+        <meta name="keywords"
+            content="marcel marin,paysagiste, paysagement extérireur, aménagement paysager, aménagement extérieur, pavé, plantation, muret, réparation de cheminé,patio de piscine, rive-sud, cantons-de-l'est, montérégis, centre du québec, estrie">
         <!--
 
 Template 2092 Shelf
@@ -15,6 +18,7 @@ http://www.tooplate.com/view/2092-shelf
 
 -->
         <title>Paysagiste Marin & Fils</title>
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
         <!-- load stylesheets -->
         <!-- Google web font "Open Sans" -->
@@ -40,7 +44,7 @@ http://www.tooplate.com/view/2092-shelf
         <div class="container">
             <header class="tm-site-header">
                 <div class="tm-site-header-text">
-                    <h1 class="tm-site-name">Marin et Fils inc.
+                    <h1 class="tm-site-name">Paysagiste Marin & Fils
                     </h1>
                     <p class="tm-site-description">Une équipe dynamique de père
                         en fils qui oeuvre dans le domaine de l'aménagement
@@ -76,48 +80,43 @@ http://www.tooplate.com/view/2092-shelf
             <div class="tm-main-content">
                 <section class="tm-margin-b-l">
                     <header>
-                        <h2 class="tm-blue-text tm-margin-b-p">Contact</h2>
+                        <h3 class="tm-blue-text tm-margin-b-p">Contact
+                        </h3>
                     </header>
-                    <p>
+                    <div>
                         Marcel Marin<br>
                         Couriel: <a
                             href="mailto: marcel.marin9@icloud.com">marcel.marin9@icloud.com</a><br>
                         Téléphone: <a
                             href="tel: 4383954590">438-395-4590</a><br>
-                    </p>
+                    </div>
 
                     <header>
-                        <h2 class="tm-blue-text tm-margin-b-p">Planification,
-                            conception et réalisation</h2>
+                        <h3 class="tm-blue-text tm-margin-b-p">Régions
+                            déservis
+                        </h3>
                     </header>
-                    <!-- <P><b>Une équipe dynamique de père en fils qui oeuvre dans
-                            le domaine avec plus de 30 ans d'expérience!</b>
-                    </P>
-                    <br> -->
-                    <p>Nous faisons l'installation et la réparation de:</p>
-                    <p>
+                    <ul>
+                        <li><i>De la Rive-Sud de Montréal aux
+                                Cantons-de-l'Est</i></li>
+                        <li>Montérégis</li>
+                        <li>Centre du Québec</li>
+                        <li>Estrie</li>
+                    </ul>
+
+                    <header>
+                        <h3 class="tm-blue-text tm-margin-b-p">Planification,
+                            conception, réalisation et réparation</h3>
+                    </header>
                     <ul>
                         <li>Aménagement paysagé</li>
                         <li>Pavé unis</li>
                         <li>Plantation</li>
                         <li>Patio de piscine</li>
-                        <li>Muret</li>
-                        <li>Muret en pierre naturel</li>
+                        <li>Muret (pavé, brique, pierre naturel, etc.)</li>
                         <li>Réparation de cheminé - allège et joint de brique
                         </li>
                     </ul>
-                    </p>
-                    <header>
-                        <h2 class="tm-blue-text tm-margin-b-p">Région déservis
-                        </h2>
-                    </header>
-                    <p>
-                    <ul>
-                        <li>Rive-sud (Montréal, Longueil)</li>
-                        <li>Montérégis</li>
-                        <li>Canton de l'est</li>
-                    </ul>
-                    </p>
 
                     <div class="tm-gallery">
                         <div class="row">
@@ -133,6 +132,7 @@ http://www.tooplate.com/view/2092-shelf
                                     </p>
                                 </a>
                             </figure>
+
                             <figure
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
@@ -144,6 +144,20 @@ http://www.tooplate.com/view/2092-shelf
                                     <p class="tm-figcaption">Plantation</p>
                                 </a>
                             </figure>
+
+                            <figure
+                                class="col-lg-4 col-md-4 col-sm-6 col-12 tm-gallery-item">
+                                <a href="#">
+                                    <div class="tm-gallery-item-overlay">
+                                        <img src="./photo/thumbnails/image00015.jpeg"
+                                            alt="Image"
+                                            class="img-fluid tm-img-center">
+                                    </div>
+                                    <p class="tm-figcaption">Muret en pierre
+                                        naturel</p>
+                                </a>
+                            </figure>
+
                             <figure
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
@@ -156,30 +170,7 @@ http://www.tooplate.com/view/2092-shelf
                                     <p class="tm-figcaption">Pavé unis</p>
                                 </a>
                             </figure>
-                            <figure
-                                class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-                                <a href="#">
-                                    <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00015.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
-                                    </div>
-                                    <p class="tm-figcaption">Muret en pierre
-                                        naturel</p>
-                                </a>
-                            </figure>
-                            <figure
-                                class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-                                <a href="#">
-                                    <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00063.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
-                                    </div>
-                                    <p class="tm-figcaption">Réparation de
-                                        cheminé</p>
-                                </a>
-                            </figure>
+
                             <figure
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
@@ -190,6 +181,19 @@ http://www.tooplate.com/view/2092-shelf
                                     </div>
                                     <p class="tm-figcaption">Patio de piscine
                                     </p>
+                                </a>
+                            </figure>
+
+                            <figure
+                                class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+                                <a href="#">
+                                    <div class="tm-gallery-item-overlay">
+                                        <img src="./photo/thumbnails/image00063.jpeg"
+                                            alt="Image"
+                                            class="img-fluid tm-img-center">
+                                    </div>
+                                    <p class="tm-figcaption">Réparation de
+                                        cheminé</p>
                                 </a>
                             </figure>
                         </div>
@@ -226,13 +230,13 @@ http://www.tooplate.com/view/2092-shelf
                     </div>
                 </section>
             </div>
-
             <footer>
-                Copyright &copy; <span class="tm-current-year">2018</span> Shelf
-                Company
-
-                - Designed by <a href="https://www.facebook.com/tooplate"
+                Copyright &copy; <span class="tm-current-year">2018</span> Marin
+                & Fils - Designed by <a href="https://www.facebook.com/tooplate"
                     target="_parent">Tooplate</a>
+                <div><a href="https://www.flaticon.com/fr/icones-gratuites/plante"
+                        title="plante icônes">Icônes créées par Pixel perfect -
+                        Flaticon</a></div>
             </footer>
         </div>
 
@@ -244,12 +248,9 @@ http://www.tooplate.com/view/2092-shelf
         <script src="js/bootstrap.min.js"></script>
         <!-- Bootstrap (https://getbootstrap.com/) -->
         <script>
-
             $(document).ready(function () {
-
                 // Update the current year in copyright
                 $('.tm-current-year').text(new Date().getFullYear());
-
             });
         </script>
     </body>
