--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ http://www.tooplate.com/view/2092-shelf
 
                     <div class="tm-gallery">
                         <div class="row">
-                            <figure
+                            <figure id="button"
                                 class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
@@ -130,6 +130,11 @@ http://www.tooplate.com/view/2092-shelf
                                     </div>
                                     <p class="tm-figcaption">Aménagement paysagé
                                     </p>
+                                    <div id="tooltip" role="tooltip">
+                                        L'aménagement de vos rêve fait avec
+                                        rigueur selon les normes le plus élevé.
+                                        <div id="arrow" data-popper-arrow></div>
+                                    </div>
                                 </a>
                             </figure>
 
@@ -243,7 +248,7 @@ http://www.tooplate.com/view/2092-shelf
         <!-- load JS files -->
         <script src="js/jquery-1.11.3.min.js"></script>
         <!-- jQuery (https://jquery.com/download/) -->
-        <script src="js/popper.min.js"></script>
+        <!-- <script src="js/popper.min.js"></script> -->
         <!-- Popper (https://popper.js.org/) -->
         <script src="js/bootstrap.min.js"></script>
         <!-- Bootstrap (https://getbootstrap.com/) -->
@@ -251,6 +256,66 @@ http://www.tooplate.com/view/2092-shelf
             $(document).ready(function () {
                 // Update the current year in copyright
                 $('.tm-current-year').text(new Date().getFullYear());
+            });
+        </script>
+
+        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script>
+            const button = document.querySelector('#button');
+            const tooltip = document.querySelector('#tooltip');
+
+            const popperInstance = Popper.createPopper(button, tooltip, {
+                placement: 'right',
+                modifiers: [
+                    {
+                        name: 'offset',
+                        options: {
+                            offset: [0, 8],
+                        },
+                    },
+                ],
+            });
+
+            function show() {
+                // Make the tooltip visible
+                tooltip.setAttribute('data-show', '');
+
+                // Enable the event listeners
+                popperInstance.setOptions((options) => ({
+                    ...options,
+                    modifiers: [
+                        ...options.modifiers,
+                        { name: 'eventListeners', enabled: true },
+                    ],
+                }));
+
+                // Update its position
+                popperInstance.update();
+            }
+
+            function hide() {
+                // Hide the tooltip
+                tooltip.removeAttribute('data-show');
+
+                // Disable the event listeners
+                popperInstance.setOptions((options) => ({
+                    ...options,
+                    modifiers: [
+                        ...options.modifiers,
+                        { name: 'eventListeners', enabled: false },
+                    ],
+                }));
+            }
+
+            const showEvents = ['mouseenter', 'focus'];
+            const hideEvents = ['mouseleave', 'blur'];
+
+            showEvents.forEach((event) => {
+                button.addEventListener(event, show);
+            });
+
+            hideEvents.forEach((event) => {
+                button.addEventListener(event, hide);
             });
         </script>
     </body>
