Enhanced the texts and styles.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Steve Lemire">
         <meta name="description"
-            content="Pour vos projets d'aménagement extérieurs, notre équipe dynamique oeuvre de père en fils depuis plus de 30 ans de la planification à la réalisation">
+              content="Pour vos projets d'aménagement extérieurs, notre équipe dynamique oeuvre de père en fils depuis plus de 30 ans de la planification à la réalisation">
         <meta name="keywords"
-            content="marcel marin,paysagiste, paysagement extérireur, aménagement paysager, aménagement extérieur, pavé, plantation, muret, réparation de cheminé,patio de piscine, rive-sud, cantons-de-l'est, montérégis, centre du québec, estrie">
+              content="marcel marin,paysagiste, paysagement extérireur, aménagement paysager, aménagement extérieur, pavé, plantation, muret, réparation de cheminé,patio de piscine, rive-sud, cantons-de-l'est, montérégis, centre du québec, estrie">
         <!--
 
 Template 2092 Shelf
@@ -17,16 +17,14 @@ Template 2092 Shelf
 http://www.tooplate.com/view/2092-shelf
 
 -->
-        <title>Paysagiste Marin & Fils</title>
+        <title>Marin & Fils</title>
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
         <!-- load stylesheets -->
         <!-- Google web font "Open Sans" -->
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
         <!-- Font Awesome -->
-        <link rel="stylesheet"
-            href="font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap style -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Custom style -->
@@ -44,173 +42,115 @@ http://www.tooplate.com/view/2092-shelf
         <div class="container">
             <header class="tm-site-header">
                 <div class="tm-site-header-text">
-                    <h1 class="tm-site-name">Paysagiste Marin & Fils
+                    <h1 class="tm-site-name">Marin & Fils
                     </h1>
-                    <p class="tm-site-description">Une équipe dynamique de père
-                        en fils qui oeuvre dans le domaine de l'aménagement
-                        paysagé d'extérieur avec plus de 30 ans d'expérience!
+                    <p class="tm-site-header-subtitle">
+                        Aménagement paysagé - Réparation de pavé et pierre en tout genre</p>
+                    <p class="tm-site-description">
+                        Une équipe dynamique de père en fils qui oeuvre dans le domaine de l'aménagement paysagé
+                        d'extérieur avec plus de 30 ans d'expérience!
                     </p>
                 </div>
-
-                <!-- <nav class="navbar navbar-expand-md tm-main-nav-container">
-                    <button class="navbar-toggler" type="button"
-                        data-toggle="collapse" data-target="#tmMainNav"
-                        aria-controls="tmMainNav" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fa fa-bars"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse tm-main-nav"
-                        id="tmMainNav">
-                        <ul class="nav nav-fill tm-main-nav-ul">
-                            <li class="nav-item"><a class="nav-link active"
-                                    href="index.html">Info</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="#">Réalisations</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="team.html">Notre équipe</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </nav> -->
-
             </header>
 
             <div class="tm-main-content">
                 <section class="tm-margin-b-l">
                     <header>
-                        <h3 class="tm-blue-text tm-margin-b-p">Contact
-                        </h3>
+                        <h3 class="tm-section-header tm-margin-b-p">Contact - Marcel Marin</h3>
                     </header>
-                    <div>
-                        Marcel Marin<br>
-                        Couriel: <a
-                            href="mailto: marcel.marin9@icloud.com">marcel.marin9@icloud.com</a><br>
-                        Téléphone: <a
-                            href="tel: 4383954590">438-395-4590</a><br>
+                    <div class="tm-gallery-item">
+                        Courriel: <a href="mailto: marcel.marin9@icloud.com">marcel.marin9@icloud.com</a><br>
+                        Téléphone: <a href="tel: 4383954590">438-395-4590</a><br>
                     </div>
 
                     <header>
-                        <h3 class="tm-blue-text tm-margin-b-p">Régions
-                            déservis
-                        </h3>
+                        <h3 class="tm-section-header tm-margin-b-p">Régions
+                            déservis</h3>
                     </header>
                     <ul>
-                        <li><i>De la Rive-Sud de Montréal aux
-                                Cantons-de-l'Est</i></li>
+                        <li><i>De la Rive-Sud de Montréal aux Cantons-de-l'Est</i></li>
                         <li>Montérégis</li>
                         <li>Centre du Québec</li>
                         <li>Estrie</li>
                     </ul>
 
                     <header>
-                        <h3 class="tm-blue-text tm-margin-b-p">Planification,
-                            conception, réalisation et réparation</h3>
+                        <h3 class="tm-section-header tm-margin-b-p">Notre Expertise</h3>
                     </header>
                     <ul>
                         <li>Aménagement paysagé</li>
-                        <li>Pavé unis</li>
-                        <li>Plantation</li>
+                        <li>Pavé unis (installation et réparation)</li>
+                        <li>Pierre à coller (intérieur et extérieur)</li>
                         <li>Patio de piscine</li>
                         <li>Muret (pavé, brique, pierre naturel, etc.)</li>
-                        <li>Réparation de cheminé - allège et joint de brique
+                        <li>Réparation de cheminé et de pierre en tout genre</li>
                         </li>
                     </ul>
 
                     <div class="tm-gallery">
                         <div class="row">
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00001.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00001.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
-                                    <p class="tm-figcaption">Aménagement paysagé
-                                    </p>
+                                    <p class="tm-figcaption">Aménagement paysagé</p>
                                 </a>
                             </figure>
 
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00055.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00055.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
                                     <p class="tm-figcaption">Plantation</p>
                                 </a>
                             </figure>
 
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00015.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00015.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
-                                    <p class="tm-figcaption">Muret en pierre
-                                        naturel</p>
+                                    <p class="tm-figcaption">Muret en pierre naturel</p>
                                 </a>
                             </figure>
 
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00036.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00036.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
 
                                     <p class="tm-figcaption">Pavé unis</p>
                                 </a>
                             </figure>
 
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00039.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00039.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
-                                    <p class="tm-figcaption">Patio de piscine
-                                    </p>
+                                    <p class="tm-figcaption">Patio de piscine</p>
                                 </a>
                             </figure>
 
-                            <figure
-                                class="col-md-4 col-sm-6 col-12 tm-gallery-item">
+                            <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
                                 <a href="#">
                                     <div class="tm-gallery-item-overlay">
-                                        <img src="./photo/thumbnails/image00063.jpeg"
-                                            alt="Image"
-                                            class="img-fluid tm-img-center">
+                                        <img src="./photo/thumbnails/image00063.jpeg" alt="Image"
+                                             class="img-fluid tm-img-center">
                                     </div>
-                                    <p class="tm-figcaption">Réparation de
-                                        cheminé</p>
+                                    <p class="tm-figcaption">Réparation de cheminé</p>
                                 </a>
                             </figure>
                         </div>
                     </div>
-
-                    <!-- <nav class="tm-gallery-nav">
-                        <ul class="nav justify-content-center">
-                            <li class="nav-item"><a class="nav-link active"
-                                    href="#">1</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="#">2</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="#">3</a></li>
-                            <li class="nav-item"><a class="nav-link"
-                                    href="#">4</a></li>
-                        </ul>
-                    </nav> -->
                 </section>
 
                 <section class="media tm-highlight tm-highlight-w-icon">
@@ -223,19 +163,19 @@ http://www.tooplate.com/view/2092-shelf
                         <header>
                             <h2>Vous avez des question?</h2>
                         </header>
-                        <p class="tm-margin-b">Notre équipe répondra dans les
-                            plus bref délais à tout vos besoins!</p>
-                        <a href="tel: 4383954590"
-                            class="tm-white-bordered-btn">438-395-4590</a>
+                        <p class="tm-margin-b">
+                            Estimation gratuite par téléphone, courriel ou sur place fait par notre équipe qui
+                            répondra à tous vos besoins dans les plus bref délais!
+                        </p>
+                        <a href="tel: 4383954590" class="tm-white-bordered-btn">438-395-4590</a>
                     </div>
                 </section>
             </div>
             <footer>
                 Copyright &copy; <span class="tm-current-year">2018</span> Marin
-                & Fils - Designed by <a href="https://www.facebook.com/tooplate"
-                    target="_parent">Tooplate</a>
-                <div><a href="https://www.flaticon.com/fr/icones-gratuites/plante"
-                        title="plante icônes">Icônes créées par Pixel perfect -
+                & Fils - Designed by <a href="https://www.facebook.com/tooplate" target="_parent">Tooplate</a>
+                <div><a href="https://www.flaticon.com/fr/icones-gratuites/plante" title="plante icônes">Icônes créées
+                        par Pixel perfect -
                         Flaticon</a></div>
             </footer>
         </div>
