Added development url.

--- a/index.html
+++ b/index.html
@@ -191,6 +191,25 @@ http://www.tooplate.com/view/2092-shelf
                 $('.tm-current-year').text(new Date().getFullYear());
             });
         </script>
+
+        <script>
+            function doPortItem(n) {
+                let img = document.createElement('img');
+                img.src = './imgportfolio/' + n + '.jpg';
+                img.addEventListener('load', () => {
+                    let div = `<div class="col-3 col-lg-4 col-md-6 col-sm-12">
+     <div class="gallery-item">
+       <div class="gallery-img">
+         <img data-lazy-image data-src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzIDIiPjwvc3ZnPg==" src="${img.src}" alt="Demo img">
+       </div>
+     </div>
+   </div>`;
+                    document.querySelector('#gallery-items').innerHTML += div;
+                    doPortItem(++n)
+                })
+            }
+            doPortItem(1)
+        </script>
     </body>
 
 </html>
